--- a/LeetCode/LeetCode.vcxproj
+++ b/LeetCode/LeetCode.vcxproj
@@ -178,6 +178,8 @@
     <ClCompile Include="..\Source\p113 Path Sum II.cpp" />
     <ClCompile Include="..\Source\p114 Flatten Binary Tree to Linked List.cpp" />
     <ClCompile Include="..\Source\p115 Distinct Subsequences.cpp" />
+    <ClCompile Include="..\Source\p116 Populating Next Right Pointers in Each Node.cpp" />
+    <ClCompile Include="..\Source\p117 Populating Next Right Pointers in Each Node II.cpp" />
     <ClCompile Include="..\Source\p136 Single Number.cpp" />
     <ClCompile Include="..\Source\p014 Longest Common Prefix.cpp" />
     <ClCompile Include="..\Source\p019 Remove Nth Node From End of List.cpp" />
