--- a/LeetCode/LeetCode.vcxproj
+++ b/LeetCode/LeetCode.vcxproj
@@ -78,6 +78,9 @@
   <ItemGroup>
     <ClCompile Include="..\Source\ali1.cpp" />
     <ClCompile Include="..\Source\leetcode.cpp" />
+    <ClCompile Include="..\Source\p118 Pascal%27s Triangle.cpp" />
+    <ClCompile Include="..\Source\p119 Pascal%27s Triangle II.cpp" />
+    <ClCompile Include="..\Source\p120 Triangle.cpp" />
     <ClCompile Include="..\Source\p001 Two Sum.cpp" />
     <ClCompile Include="..\Source\p010 Regular Expression Matching.cpp" />
     <ClCompile Include="..\Source\p011 Container With Most Water.cpp" />
@@ -180,6 +183,7 @@
     <ClCompile Include="..\Source\p115 Distinct Subsequences.cpp" />
     <ClCompile Include="..\Source\p116 Populating Next Right Pointers in Each Node.cpp" />
     <ClCompile Include="..\Source\p117 Populating Next Right Pointers in Each Node II.cpp" />
+    <ClCompile Include="..\Source\p121 Best Time to Buy and Sell Stock.cpp" />
     <ClCompile Include="..\Source\p136 Single Number.cpp" />
     <ClCompile Include="..\Source\p014 Longest Common Prefix.cpp" />
     <ClCompile Include="..\Source\p019 Remove Nth Node From End of List.cpp" />
