--- a/LeetCode/LeetCode.vcxproj
+++ b/LeetCode/LeetCode.vcxproj
@@ -1,5 +1,5 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
-<Project DefaultTargets="Build" ToolsVersion="12.0" xmlns="http://schemas.microsoft.com/developer/msbuild/2003">
+<Project DefaultTargets="Build" ToolsVersion="14.0" xmlns="http://schemas.microsoft.com/developer/msbuild/2003">
   <ItemGroup Label="ProjectConfigurations">
     <ProjectConfiguration Include="Debug|Win32">
       <Configuration>Debug</Configuration>
@@ -19,13 +19,13 @@
   <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Debug|Win32'" Label="Configuration">
     <ConfigurationType>Application</ConfigurationType>
     <UseDebugLibraries>true</UseDebugLibraries>
-    <PlatformToolset>v120</PlatformToolset>
+    <PlatformToolset>v140</PlatformToolset>
     <CharacterSet>Unicode</CharacterSet>
   </PropertyGroup>
   <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Release|Win32'" Label="Configuration">
     <ConfigurationType>Application</ConfigurationType>
     <UseDebugLibraries>false</UseDebugLibraries>
-    <PlatformToolset>v120</PlatformToolset>
+    <PlatformToolset>v140</PlatformToolset>
     <WholeProgramOptimization>true</WholeProgramOptimization>
     <CharacterSet>Unicode</CharacterSet>
   </PropertyGroup>
@@ -184,6 +184,13 @@
     <ClCompile Include="..\Source\p116 Populating Next Right Pointers in Each Node.cpp" />
     <ClCompile Include="..\Source\p117 Populating Next Right Pointers in Each Node II.cpp" />
     <ClCompile Include="..\Source\p121 Best Time to Buy and Sell Stock.cpp" />
+    <ClCompile Include="..\Source\p122 Best Time to Buy and Sell Stock II.cpp" />
+    <ClCompile Include="..\Source\p123 Best Time to Buy and Sell Stock III.cpp" />
+    <ClCompile Include="..\Source\p124 Binary Tree Maximum Path Sum.cpp" />
+    <ClCompile Include="..\Source\p125 Valid Palindrome.cpp" />
+    <ClCompile Include="..\Source\p126 Word Ladder II.cpp" />
+    <ClCompile Include="..\Source\p127 Word Ladder.cpp" />
+    <ClCompile Include="..\Source\p128 Longest Consecutive Sequence.cpp" />
     <ClCompile Include="..\Source\p136 Single Number.cpp" />
     <ClCompile Include="..\Source\p014 Longest Common Prefix.cpp" />
     <ClCompile Include="..\Source\p019 Remove Nth Node From End of List.cpp" />
